--- a/src/components/FolderSwiper.css
+++ b/src/components/FolderSwiper.css
@@ -7,7 +7,7 @@
     display: flex;
     justify-content: center;
     perspective: 1000px;
-    margin-top: 10%;
+    margin-top: 5%;
     /* 날아가는 카드가 화면 밖에서 안 보이게 */
 }
 
@@ -38,6 +38,7 @@
     transform-origin: bottom center;
 
     user-select: none;
+    
 }
 
 /* 맨 뒤 카드 */
@@ -69,7 +70,53 @@
 .folder-card-top {
     z-index: 3;
     /* transform은 JS에서 제어 */
-    background: #2a2a2a;
+    /* background: #2a2a2a; */
     background-position: center;
     background-size: cover;
+    height: 100%;
+}
+
+.folder-card-top {
+    perspective: 1200px;
+    /* 3D 느낌 */
+}
+
+.card-flip-inner {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    transform-style: preserve-3d;
+    transition: transform 0.6s;
+}
+
+/* 플립됐을 때 */
+.folder-card-top.is-flipped .card-flip-inner {
+    transform: rotateY(180deg);
+}
+
+/* 앞/뒷면 공통 */
+.card-face {
+    position: absolute;
+    inset: 0;
+    backface-visibility: hidden;
+}
+
+/* 뒷면 */
+.card-face-back {
+    transform: rotateY(180deg);
+    background: #050816;
+    color: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid #fff;
+    padding: 16px;
+    border-radius: 16px;
+    background-position: center;
+    background-size: cover;
+}
+
+.card-face-back .back-inner {
+    text-align: center;
+    font-family: ui-monospace, SFMono-Regular, Menlo, monospace;
 }
